refactor(clickhouse): use StringUtils.isBlank in parseQueryParameters; test blank string
Simplify the null-or-blank guard in parseQueryParameters to StringUtils.isBlank
(null-, empty-, and whitespace-safe in one call) and cover a whitespace queryParameters
end-to-end alongside the existing null case, confirming a blank chain plus an override
still injects into custom_http_params on both client paths.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>